cmake_minimum_required(VERSION 3.28)
project(FlowControl)

set(CMAKE_CXX_STANDARD 17)

add_executable(FlowControl main.cpp
        Singles/statments.cpp
        Singles/statments.h
        Singles/condition.cpp
        Singles/condition.h
        Singles/values.cpp
        Singles/values.h
        Singles/positive.cpp
        Singles/positive.h
        Singles/nested.cpp
        Singles/nested.h
        Singles/boolean.cpp
        Singles/boolean.h
        Singles/bellow.cpp
        Singles/bellow.h
        Singles/examples.cpp
        Singles/examples.h
        Singles/objs.cpp
        Singles/objs.h
        Singles/count.cpp
        Singles/count.h
        Singles/first.cpp
        Singles/first.h
        Singles/times.cpp
        Singles/times.h
        Singles/loops.cpp
        Singles/loops.h
        Singles/stats.cpp
        Singles/stats.h
        Singles/layout.cpp
        Singles/layout.h
        Singles/tips.cpp
        Singles/tips.h
        Singles/mathlab.cpp
        Singles/mathlab.h
        Singles/tipsargs.cpp
        Singles/tipsargs.h
        Singles/tipsnever.cpp
        Singles/tipsnever.h
        Singles/tipspoints.cpp
        Singles/tipspoints.h
        Singles/zeros.cpp
        Singles/zeros.h
        Features/variables.cpp
        Features/variables.h
        Features/check.cpp
        Features/check.h
        Features/vectors.cpp
        Features/vectors.h
        Features/way.cpp
        Features/way.h
        Features/basic.cpp
        Features/basic.h
        Features/settings.cpp
        Features/settings.h
        Features/files.cpp
        Features/files.h
        Features/lists.cpp
        Features/lists.h
        Features/goods.cpp
        Features/goods.h
        Features/how.cpp
        Features/how.h
        Singles/lives.cpp
        Singles/lives.h
)
